Self Serve Fonts

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -1,16 +1,23 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>SegFault</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="preload" href="assets/fonts/material-icons.ttf" as="font" type="font/ttf">
+  <link rel="preload" href="assets/fonts/pt-sans-700.ttf" as="font" type="font/ttf">
+  <link rel="preload" href="assets/fonts/roboto-300.ttf" as="font" type="font/ttf">
+  <link rel="preload" href="assets/fonts/roboto-400.ttf" as="font" type="font/ttf">
+  <link rel="preload" href="assets/fonts/roboto-500.ttf" as="font" type="font/ttf">
+  <link rel="preload" href="assets/fonts/source-sans-pro-i-400.ttf" as="font" type="font/ttf">
+
 </head>
+
 <body style="background-color: #474747;" class="mat-typography">
   <app-root></app-root>
 </body>
+
 </html>
