Small Theming adjustments to xpra_client

--- a/ui/src/assets/xpra_client/html5/connect.html
+++ b/ui/src/assets/xpra_client/html5/connect.html
@@ -39,7 +39,7 @@
 	-->
   </head>
 
-  <body>
+  <body style="color: #ffe8e8;background-color: #666060;">
     <div class="container">
       <form class="form-signin" action="./index.html">
         <img src="icons/xpra-logo.png" alt="xpra logo" />
@@ -300,7 +300,7 @@
               id="hiddenopts"
               class="panel-collapse collapse in"
               role="tabpanel"
-              style="display: none"
+              style="display: none; color: rgb(0 0 0);"
             >
               <ul class="list-group">
                 <li class="list-group-item">
