--- a/ui/src/assets/xpra_client/html5/index.html
+++ b/ui/src/assets/xpra_client/html5/index.html
@@ -90,7 +90,7 @@
     <link rel="stylesheet" href="css/simple-keyboard.css" />
   </head>
 
-  <body>
+  <body style="color: #ffe8e8;background-color: #666060;">
     <div
       id="dpi"
       style="
