--- a/ui/src/assets/xpra_client/html5/mitm.html
+++ b/ui/src/assets/xpra_client/html5/mitm.html
@@ -183,5 +183,6 @@
       }
     </script>
   </head>
-  <body></body>
+  <!-- prevent bright white flashes-->
+  <body style="color: #ffe8e8;background-color: #666060;"></body>
 </html>
