--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -7,12 +7,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preload" href="assets/fonts/material-icons.ttf" as="font" type="font/ttf">
+  <!-- <link rel="preload" href="assets/fonts/material-icons.ttf" as="font" type="font/ttf"> 
   <link rel="preload" href="assets/fonts/pt-sans-700.ttf" as="font" type="font/ttf">
   <link rel="preload" href="assets/fonts/roboto-300.ttf" as="font" type="font/ttf">
   <link rel="preload" href="assets/fonts/roboto-400.ttf" as="font" type="font/ttf">
   <link rel="preload" href="assets/fonts/roboto-500.ttf" as="font" type="font/ttf">
-  <link rel="preload" href="assets/fonts/source-sans-pro-i-400.ttf" as="font" type="font/ttf">
+  <link rel="preload" href="assets/fonts/source-sans-pro-i-400.ttf" as="font" type="font/ttf"> -->
 
 </head>
 
