--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -5,15 +5,33 @@
   <meta charset="utf-8">
   <title>SegFault</title>
   <base href="/">
+  <meta name="description" content="SFUI - Free root shells, powered by thc.org/segfault">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <link rel="preload" href="assets/fonts/material-icons.ttf" as="font" type="font/ttf"> 
   <link rel="preload" href="assets/fonts/pt-sans-700.ttf" as="font" type="font/ttf">
-  <link rel="preload" href="assets/fonts/roboto-300.ttf" as="font" type="font/ttf">
-  <link rel="preload" href="assets/fonts/roboto-400.ttf" as="font" type="font/ttf">
-  <link rel="preload" href="assets/fonts/roboto-500.ttf" as="font" type="font/ttf">
-  <link rel="preload" href="assets/fonts/source-sans-pro-i-400.ttf" as="font" type="font/ttf"> -->
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
 
+    html,
+    body {
+      height: 100%;
+    }
+
+    body {
+      font-family: 'PT Sans';
+    }
+
+    @font-face {
+      font-family: 'PT Sans';
+      font-style: italic;
+      font-weight: 700;
+      font-display: swap;
+      src: url('assets/fonts/pt-sans-700.ttf') format('truetype');
+    }
+  </style>
 </head>
 
 <body style="background-color: #474747;" class="mat-typography">
