--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -8,7 +8,6 @@
   <meta name="description" content="SFUI - Free root shells, powered by thc.org/segfault">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preload" href="assets/fonts/pt-sans-700.ttf" as="font" type="font/ttf">
   <style>
     * {
       margin: 0;
@@ -29,7 +28,7 @@
       font-style: italic;
       font-weight: 700;
       font-display: swap;
-      src: url('assets/fonts/pt-sans-700.ttf') format('truetype');
+      src: url('assets/fonts/pt-sans-700.woff2') format('woff2');
     }
   </style>
 </head>
