--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -46,6 +46,7 @@
       --control-bar-height: 2.5rem;
       --start-new-btn-text: white;
       --enter-secret-btn-text: black;
+      --help-btn-bg: rgb(45 49 51 / 93%);
     }
 
 
@@ -65,6 +66,7 @@
       --control-bar-height: 2.5rem;
       --start-new-btn-text: black;
       --enter-secret-btn-text: black;
+      --help-btn-bg: brightness(0) saturate(100%) invert(79%) sepia(0%) saturate(5%) hue-rotate(155deg) brightness(97%) contrast(84%);
     }
   </style>
 </head>
