Small UI enhancements

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -47,6 +47,7 @@
       --start-new-btn-text: white;
       --enter-secret-btn-text: black;
       --help-btn-bg: rgb(45 49 51 / 93%);
+      --close-btn-color: var(--active-bg);
     }
 
 
@@ -67,6 +68,7 @@
       --start-new-btn-text: black;
       --enter-secret-btn-text: black;
       --help-btn-bg: brightness(0) saturate(100%) invert(79%) sepia(0%) saturate(5%) hue-rotate(155deg) brightness(97%) contrast(84%);
+      --close-btn-color: #0ea5e9;
     }
   </style>
 </head>
