Better Share Message

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -49,6 +49,7 @@
       --enter-secret-btn-text: black;
       --help-btn-bg: rgb(45 49 51 / 93%);
       --close-btn-color: var(--active-bg);
+      --alt-close-btn-color: #aaaaaa6b;
     }
 
 
@@ -70,6 +71,7 @@
       --enter-secret-btn-text: black;
       --help-btn-bg: brightness(0) saturate(100%) invert(79%) sepia(0%) saturate(5%) hue-rotate(155deg) brightness(97%) contrast(84%);
       --close-btn-color: #0ea5e9;
+      --alt-close-btn-color: #9798a16b;
     }
   </style>
 </head>
