Adde Login Indicator

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -50,6 +50,7 @@
       --help-btn-bg: rgb(45 49 51 / 93%);
       --close-btn-color: var(--active-bg);
       --alt-close-btn-color: #aaaaaa6b;
+      --loading-spinner-color: #474747;
     }
 
 
@@ -72,6 +73,7 @@
       --help-btn-bg: brightness(0) saturate(100%) invert(79%) sepia(0%) saturate(5%) hue-rotate(155deg) brightness(97%) contrast(84%);
       --close-btn-color: #0ea5e9;
       --alt-close-btn-color: #9798a16b;
+      --loading-spinner-color: #ffff;
     }
   </style>
 </head>
