--- a/filebrowser-ui/index.html
+++ b/filebrowser-ui/index.html
@@ -23,7 +23,7 @@
     window.SfUiSecret = configData[0]
     window.BaseURL = configData[1] + "/filebrowser"
 
-    window.FileBrowser = JSON.parse('{"AuthMethod":"noauth","BaseURL":"' + window.BaseURL + '","CSS":false,"Color":"","DisableExternal":false,"DisableUsedPercentage":false,"EnableExec":true,"EnableThumbs":true,"LoginPage":false,"Name":"","NoAuth":true,"ReCaptcha":false,"ResizePreview":true,"Signup":false,"StaticURL":"/assets/filebrowser_client","Theme":"light","Version":"v2.23.0-10-g1a5b9995"}');
+    window.FileBrowser = JSON.parse('{"AuthMethod":"noauth","BaseURL":"' + window.BaseURL + '","CSS":false,"Color":"","DisableExternal":false,"DisableUsedPercentage":false,"EnableExec":true,"EnableThumbs":true,"LoginPage":false,"Name":"","NoAuth":true,"ReCaptcha":false,"ResizePreview":true,"Signup":false,"StaticURL":"/assets/filebrowser_client","Theme":"light","Version":"v2.24.2-184b7c1","TusSettings": { "chunkSize": 10485760, "retryCount": 5 }}');
 
     var fullStaticURL = window.FileBrowser.StaticURL;
     var dynamicManifest = {
@@ -138,6 +138,7 @@
     </div>
   </div>
   <meta class="dark-theme">
+  <script type="module" src="./src/main.js"></script>
   <!-- <link rel="stylesheet" href="themes/dark.css"> -->
 </body>
 
